# ultimate-invitation-card

./: .gitignore  README.md  ultimate-invitation-card.code-workspace
.VSCodeCounter/2024-02-18_17-29-39/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-18_17-31-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
firmware/ultimate-invitation-card/: CMakeLists.txt  screen-drafts.txt  sdkconfig  sdkconfig.old
firmware/ultimate-invitation-card/main/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  p13n.hpp  pwm_audio.c
firmware/ultimate-invitation-card/main/components/: captive_portal.cpp  captive_portal.hpp  captive_portal_dns.cpp  captive_portal_dns.hpp  captive_portal_http.cpp  captive_portal_http.hpp  captive_portal_wifi.cpp  captive_portal_wifi.hpp  cuttable_wire_watcher.cpp  cuttable_wire_watcher.hpp  i_display.hpp  i_playbook.hpp  oled_display.cpp  oled_display.hpp  playbook.cpp  playbook.hpp  playbook_item.hpp  power_timeout.cpp  power_timeout.hpp  pwm.cpp  pwm.hpp  time_sync.cpp  time_sync.hpp  tls_connection.cpp  tls_connection.hpp
firmware/ultimate-invitation-card/main/components/event/: event_dispatcher.cpp  event_dispatcher.hpp  i_event_dispatcher.hpp
firmware/ultimate-invitation-card/main/resources/: countdown.h  dotmatrix_img.h  font_8x8.cpp  font_8x8.hpp  html_captive_portal.hpp  i_font.hpp  iso8859-1_roll.h  iso8859-1_text.h  isrgrootx1.pem  matrix.h  neei.h  power_on_intro.h  respond_intro.h  venue_video.h  wee.h
firmware/ultimate-invitation-card/main/resources/captive_portal/: build_byte_array.php  package-lock.json  package.json  webpack.config.js
firmware/ultimate-invitation-card/main/resources/captive_portal/docker/: docker-compose.yml
firmware/ultimate-invitation-card/main/resources/captive_portal/src/: index.html.ejs  main.js  main.scss
firmware/ultimate-invitation-card/main/rundown/: address_rundown.cpp  address_rundown.hpp  bring_rundown.cpp  bring_rundown.hpp  clothing_rundown.cpp  clothing_rundown.hpp  countdown_rundown.cpp  countdown_rundown.hpp  happy_roller_rundown.cpp  happy_roller_rundown.hpp  i_rundown.hpp  info_more_rundown.cpp  info_more_rundown.hpp  info_rundown.cpp  info_rundown.hpp  intro_coming_rundown.cpp  intro_coming_rundown.hpp  intro_not_coming_rundown.cpp  intro_not_coming_rundown.hpp  intro_rundown.cpp  intro_rundown.hpp  low_battery_rundown.cpp  low_battery_rundown.hpp  main_menu_not_sent_rundown.cpp  main_menu_not_sent_rundown.hpp  main_menu_responded_rundown.cpp  main_menu_responded_rundown.hpp  main_menu_rundown.cpp  main_menu_rundown.hpp  mnu_change_response_rundown.cpp  mnu_change_response_rundown.hpp  neei_rundown.cpp  neei_rundown.hpp  nvs_deleted_rundown.cpp  nvs_deleted_rundown.hpp  qrcode_rundown.cpp  qrcode_rundown.hpp  respond_amend_rundown.cpp  respond_amend_rundown.hpp  respond_provision_and_amend_rundown.cpp  (+39 more)
hardware/: board_outline.dxf  fp-info-cache  ultimate-invitation-card.kicad_pcb  ultimate-invitation-card.kicad_prl  ultimate-invitation-card.kicad_pro  ultimate-invitation-card.kicad_sch
hardware/gerber/: ultimate-invitation-card-B_Cu.gbr  ultimate-invitation-card-B_Mask.gbr  ultimate-invitation-card-B_Paste.gbr  ultimate-invitation-card-B_Silkscreen.gbr  ultimate-invitation-card-Edge_Cuts.gbr  ultimate-invitation-card-F_Cu.gbr  ultimate-invitation-card-F_Mask.gbr  ultimate-invitation-card-F_Paste.gbr  ultimate-invitation-card-F_Silkscreen.gbr  ultimate-invitation-card-In1_Cu.gbr  ultimate-invitation-card-In2_Cu.gbr  ultimate-invitation-card-NPTH.drl  ultimate-invitation-card-PTH.drl  (+1 more)
(+5 files in other folders)
